[gd_scene load_steps=2 format=3 uid="uid://cyber_motorcycle_001"]

[ext_resource type="Script" path="res://scripts/gameplay/VehicleController.gd" id="1_script"]

[sub_resource type="BoxMesh" id="BoxMesh_body"]
size = Vector3(0.6, 0.5, 2.0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_body"]
albedo_color = Color(0.1, 0.1, 0.12, 1)
metallic = 0.95
roughness = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_wheel"]
top_radius = 0.35
bottom_radius = 0.35
height = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wheel"]
albedo_color = Color(0.15, 0.15, 0.15, 1)
metallic = 0.3
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_seat"]
size = Vector3(0.35, 0.15, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_seat"]
albedo_color = Color(0.05, 0.05, 0.08, 1)
roughness = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_handlebar"]
size = Vector3(0.8, 0.08, 0.08)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_chrome"]
albedo_color = Color(0.7, 0.75, 0.8, 1)
metallic = 1.0
roughness = 0.05

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_collision"]
radius = 0.4
height = 2.2

[sub_resource type="SphereShape3D" id="SphereShape3D_interaction"]
radius = 2.0

[node name="CyberMotorcycle" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_script")
max_speed = 25.0
acceleration = 12.0
boost_multiplier = 1.6

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_collision")

[node name="MeshPivot" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="MeshPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_body")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="FrontWheel" type="MeshInstance3D" parent="MeshPivot"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.35, -0.8)
mesh = SubResource("CylinderMesh_wheel")
surface_material_override/0 = SubResource("StandardMaterial3D_wheel")

[node name="RearWheel" type="MeshInstance3D" parent="MeshPivot"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.35, 0.7)
mesh = SubResource("CylinderMesh_wheel")
surface_material_override/0 = SubResource("StandardMaterial3D_wheel")

[node name="Seat" type="MeshInstance3D" parent="MeshPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0.2)
mesh = SubResource("BoxMesh_seat")
surface_material_override/0 = SubResource("StandardMaterial3D_seat")

[node name="Handlebar" type="MeshInstance3D" parent="MeshPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.6)
mesh = SubResource("BoxMesh_handlebar")
surface_material_override/0 = SubResource("StandardMaterial3D_chrome")

[node name="NeonStrip" type="OmniLight3D" parent="MeshPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
light_color = Color(1, 0, 0.4, 1)
light_energy = 1.0
omni_range = 3.0

[node name="Headlight" type="SpotLight3D" parent="MeshPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965, -0.259, 0, 0.259, 0.965, 0, 0.6, -1)
light_color = Color(0.9, 0.95, 1, 1)
light_energy = 3.0
spot_range = 15.0
spot_angle = 25.0

[node name="DriverSeat" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0.2)

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 4)

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_interaction")

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="."]
max_db = -5.0
